Bug 470699 - App added to panel as a widget from Kickoff's "Add to panel (widget)" menu item has a generic icon
Summary: App added to panel as a widget from Kickoff's "Add to panel (widget)" menu it...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Panel (other bugs)
Version First Reported In: master
Platform: Neon Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: qt6
Depends on:
Blocks:
 
Reported: 2023-06-06 12:06 UTC by Patrick Silva
Modified: 2023-07-08 14:53 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
screenshot (644.27 KB, image/png)
2023-06-06 12:06 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2023-06-06 12:06:01 UTC
Created attachment 159495 [details]
screenshot

STEPS TO REPRODUCE
1. open Kickoff
2. right-click on an app and choose "Add to panel (Widget)"
3. 

OBSERVED RESULT
the app added to panel has a generic icon. Please see the attached screenshot.

EXPECTED RESULT
correct icon

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.27.80
KDE Frameworks Version: 5.240.0
Qt Version: 6.5.0
Graphics Platform: Wayland
Comment 1 Nate Graham 2023-06-06 16:58:48 UTC
Can confirm.
Comment 2 Nate Graham 2023-06-09 15:22:09 UTC
Not fixed with the big Plasma widget API refactor.
Comment 3 Bug Janitor Service 2023-07-07 18:19:19 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/3051
Comment 4 Nicolas Fella 2023-07-08 14:53:23 UTC
Git commit f0b0cda7ebb195047021b9b8c86dc1fcf5fc3c99 by Nicolas Fella.
Committed on 08/07/2023 at 14:15.
Pushed by nicolasfella into branch 'master'.

[applets/kicker] Pass proper QUrl when creating icon widget

The receiving side expects a URL, not a path

In Qt5 this was implicitly converted appropriately, in Qt6 not

M  +2    -2    applets/kicker/plugin/containmentinterface.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/f0b0cda7ebb195047021b9b8c86dc1fcf5fc3c99