[applets/kicker] Pass proper QUrl when creating icon widget

The receiving side expects a URL, not a path

In Qt5 this was implicitly converted appropriately, in Qt6 not

BUG: 470699